crates/blz-core/tests/compile-fail/invalid_api.rs
fn main() {
    let _ = blz_core::this_function_does_not_exist();
}

